--- a/cluster-secret-store.yaml
+++ b/cluster-secret-store.yaml
@@ -12,4 +12,13 @@ spec:
         tokenSecretRef:
           name: "vault-token"
           key: "token"
-          namespace: vault
+          namespace: jenkins-staging
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: vault-token
+  namespace: jenkins-staging
+data:
+  token: cy43YkxPQ0xZbXV6ZHR1ektHTmtidVpOaUU=
+
