--- a/external-pullsecret-cluster.yaml
+++ b/external-pullsecret-cluster.yaml
@@ -8,9 +8,57 @@ spec:
     name: vault-backend
     kind: ClusterSecretStore
   target:
-    name: mohamed-newsecret
+    name: sec1
   data:
-  - secretKey: argo
+  - secretKey: password
     remoteRef:
       key: hpe/ctgasr-dse-developer/prod/argo
       property: token
+  - secretKey: username
+    remoteRef:
+      key: hpe/ctgasr-dse-developer/prod/argo
+      property: username
+
+---
+apiVersion: external-secrets.io/v1alpha1
+kind: ExternalSecret
+metadata:
+  name: vault-example 
+spec:
+  refreshInterval: "15s"
+  secretStoreRef:
+    name: vault-backend
+    kind: ClusterSecretStore
+  target:
+    name: sec2
+  data:
+  - secretKey: password
+    remoteRef:
+      key: hpe/ctgasr-dse-developer/prod/mougins
+      property: password
+  - secretKey: username
+    remoteRef:
+      key: hpe/ctgasr-dse-developer/prod/mougins
+      property: username
+     
+ ---
+apiVersion: external-secrets.io/v1alpha1
+kind: ExternalSecret
+metadata:
+  name: vault-example 
+spec:
+  refreshInterval: "15s"
+  secretStoreRef:
+    name: vault-backend
+    kind: ClusterSecretStore
+  target:
+    name: sec3
+  data:
+  - secretKey: password
+    remoteRef:
+      key: hpe/ctgasr-dse-developer/prod/nice
+      property: token
+  - secretKey: username
+    remoteRef:
+      key: hpe/ctgasr-dse-developer/prod/nice
+      property: username
