--- a/external-pullsecret-cluster.yaml
+++ b/external-pullsecret-cluster.yaml
@@ -1,7 +1,7 @@
 apiVersion: external-secrets.io/v1alpha1
 kind: ExternalSecret
 metadata:
-  name: vault-example 
+  name: vault-1 
 spec:
   refreshInterval: "15s"
   secretStoreRef:
@@ -23,7 +23,7 @@ spec:
 apiVersion: external-secrets.io/v1alpha1
 kind: ExternalSecret
 metadata:
-  name: vault-example 
+  name: vault-2
 spec:
   refreshInterval: "15s"
   secretStoreRef:
@@ -45,7 +45,7 @@ spec:
 apiVersion: external-secrets.io/v1alpha1
 kind: ExternalSecret
 metadata:
-  name: vault-example 
+  name: vault-3 
 spec:
   refreshInterval: "15s"
   secretStoreRef:
