--- a/external-pullsecret-cluster.yaml
+++ b/external-pullsecret-cluster.yaml
@@ -1,14 +1,14 @@
 apiVersion: external-secrets.io/v1alpha1
 kind: ExternalSecret
 metadata:
-  name: vault-1 
+  name: vault-a 
 spec:
   refreshInterval: "15s"
   secretStoreRef:
     name: vault-backend
     kind: ClusterSecretStore
   target:
-    name: sec1
+    name: sec-a
   data:
   - secretKey: password
     remoteRef:
@@ -18,19 +18,18 @@ spec:
     remoteRef:
       key: hpe/ctgasr-dse-developer/prod/argo
       property: username
-
 ---
 apiVersion: external-secrets.io/v1alpha1
 kind: ExternalSecret
 metadata:
-  name: vault-2
+  name: vault-b
 spec:
   refreshInterval: "15s"
   secretStoreRef:
     name: vault-backend
     kind: ClusterSecretStore
   target:
-    name: sec2
+    name: sec-b
   data:
   - secretKey: password
     remoteRef:
@@ -39,20 +38,19 @@ spec:
   - secretKey: username
     remoteRef:
       key: hpe/ctgasr-dse-developer/prod/mougins
-      property: username
-     
+      property: username    
  ---
 apiVersion: external-secrets.io/v1alpha1
 kind: ExternalSecret
 metadata:
-  name: vault-3 
+  name: vault-c
 spec:
   refreshInterval: "15s"
   secretStoreRef:
     name: vault-backend
     kind: ClusterSecretStore
   target:
-    name: sec3
+    name: sec-c
   data:
   - secretKey: password
     remoteRef:
