--- a/external-pullsecret-cluster.yaml
+++ b/external-pullsecret-cluster.yaml
@@ -18,3 +18,25 @@ spec:
     remoteRef:
       key: hpe/ctgasr-dse-developer/prod/argo
       property: username
+      
+---
+apiVersion: external-secrets.io/v1alpha1
+kind: ExternalSecret
+metadata:
+  name: vault-b 
+spec:
+  refreshInterval: "15s"
+  secretStoreRef:
+    name: vault-backend
+    kind: ClusterSecretStore
+  target:
+    name: sec-b
+  data:
+  - secretKey: password
+    remoteRef:
+      key: hpe/ctgasr-dse-developer/prod/nice
+      property: token
+  - secretKey: username
+    remoteRef:
+      key: hpe/ctgasr-dse-developer/prod/nice
+      property: username
