--- a/external-pullsecret-cluster.yaml
+++ b/external-pullsecret-cluster.yaml
@@ -40,3 +40,25 @@ spec:
     remoteRef:
       key: hpe/ctgasr-dse-developer/prod/nice
       property: username
+
+---
+apiVersion: external-secrets.io/v1alpha1
+kind: ExternalSecret
+metadata:
+  name: vault-c 
+spec:
+  refreshInterval: "15s"
+  secretStoreRef:
+    name: vault-backend
+    kind: ClusterSecretStore
+  target:
+    name: sec-c
+  data:
+  - secretKey: password
+    remoteRef:
+      key: hpe/ctgasr-dse-developer/prod/mougins
+      property: password
+  - secretKey: username
+    remoteRef:
+      key: hpe/ctgasr-dse-developer/prod/mougins
+      property: username
